--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -308,9 +308,9 @@ widgets:
         position: left
         type: adsense
         # AdSense client ID
-        client_id: ''
+        client_id: 'ca-pub-0205030887938130'
         # AdSense AD unit ID
-        slot_id: ''
+        slot_id: '6268478734'
     # Follow.it email subscription widget configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
